2008-10-02  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/Makefile.am: Add the utf8-{1,2,3,4} tests.
	* testsuite/Makefile.tests: Add the utf8-{1,2,3,4} tests.
	* testsuite/runtest: Support skipping tests.
	* testsuite/utf8-1.good: New.
	* testsuite/utf8-1.inp: New.
	* testsuite/utf8-1.sed: New.
	* testsuite/utf8-2.good: New.
	* testsuite/utf8-2.inp: New.
	* testsuite/utf8-2.sed: New.
	* testsuite/utf8-3.good: New.
	* testsuite/utf8-3.inp: New.
	* testsuite/utf8-3.sed: New.
	* testsuite/utf8-4.good: New.
	* testsuite/utf8-4.inp: New.
	* testsuite/utf8-4.sed: New.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* BUGS: Document s/.*.// behavior with invalid multibyte sequences.
	* NEWS: Document `z' extension.
	* doc/sed-in.texi: Document both things.
	* sed/compile.c (compile_program): Recognize `z'.
	* sed/execute.c (execute_program): Execute `z'.
	* testsuite/Makefile.am: Add badenc test.
	* testsuite/Makefile.tests: Add badenc test.
	* testsuite/badenc.good: New.
	* testsuite/badenc.inp: New.
	* testsuite/badenc.sed: New.

2008-09-28  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h: Replace alloca cruft with alloca.h.
	* bootstrap.sh.in: Update for new gnulib.
	* bootstrap.sh: Update for new gnulib.
	* configure.ac: Move gnulib macros earlier.
	* sed/execute.c: Do not include acl.h when bootstrapping.

2008-08-27  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown): Close the input file!

2008-08-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Add gl_DISABLE_THREADS.

2008-08-20  Ralf Wildenhues  <ralf.wildenhues@gmx.de

	* doc/sed-in.texi: Drop leading whitespace where appropriate,
	do not use TABs.
	* doc/sed.texi: Regnerate.

2008-08-19  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c: Do not include strverscmp.c.
