@@ -18,8 +18,8 @@
 
 # gnulib modules used by this package.
 gnulib_modules="
-    acl alloca extensions getline getopt gettext memchr memcmp memmove
-    mkstemp obstack pathmax regex stdbool stat-macros
+    acl alloca extensions getline getopt gettext localcharset memchr memcmp \
+    memmove mkstemp obstack pathmax regex stdbool stat-macros
     strerror strverscmp unlocked-io verify"
 
 checkout_only_file=
