@@ -6,9 +6,8 @@ localedir = $(datadir)/locale
 sed_SOURCES = sed.c compile.c execute.c regexp.c fmt.c mbcs.c utils.c
 noinst_HEADERS = sed.h utils.h
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_srcdir)/intl \
-	-I$(top_srcdir) -I$(top_builddir)/lib \
-	-I$(top_builddir)/intl -DLOCALEDIR=\"$(localedir)\"
+AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_srcdir) -I$(top_builddir)/lib \
+	-DLOCALEDIR=\"$(localedir)\"
 
 sed_LDADD = @INTLLIBS@ @LIB_ACL@ ../lib/libsed.a
 sed_DEPENDENCIES = ../lib/libsed.a
