@@ -3,6 +3,9 @@ Sed 4.1f
 * added a new extension `z` to clear pattern space even in the presence
 of invalid multibyte sequences
 
+* a preexisting GNU gettext installation is needed in order to compile
+GNU sed with NLS support
+
 * multibyte processing fixed
 
 ----------------------------------------------------------------------------
